[tool.poetry]
name = "sparrot"
version = "1.0.0"
description = ""
authors = ["karrni <24398546+karrni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
colorama = "^0.4.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sparrot = "sparrot.main:main"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
