[tool.poetry]
name = "sparrot"
version = "1.4.0"
description = "Discover related domains using Whois data from whoxy.com"
authors = ["karrni <24398546+karrni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
colorama = "^0.4.5"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sparrot = "sparrot.main:main"

[tool.ruff]
select = ["E", "W", "F", "UP", "B", "YTT", "Q", "T10", "TID", "ISC", "TCH", "C4"]
line-length=119

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
